...
            key: _formKey,
            child: Column(
              children: [
                LoginHeader(textsUtil: textsUtil),
                SizedBox(height: ResponsiveApp.dHeight(40.0)),
                TextFormFieldWidget(
                  fieldKey: const Key('email_field'),
                  controller: controllerEmail,
                  sLabel: textsUtil.getText('login.email'),
                  validator: (value) {
                    if (value == null || value.isEmpty) {
                      setState(() => bEmailError = true);
                      return textsUtil.getText('login.error');
...
                    return null;
                  },
                  bError: bEmailError
                ),
                SizedBox(height: ResponsiveApp.dHeight(32.0)),
                TextFormFieldWidget(
                  fieldKey: const Key('password_field'),
                  controller: controllerPassword,
                  sLabel: textsUtil.getText('login.password'),
                  bIsPassword: true,
                  validator: (value) {
                    if (value == null || value.isEmpty) {
                      setState(() => bPassError = true);
...
                    return null;
                  },
                  bError: bPassError
                ),
                SizedBox(height: ResponsiveApp.dHeight(48.0)),
                MainButton(
                  key: const Key('login_button'),
                  sLabel: textsUtil.getText('login.button'),
                  onPressed: login
                ),
                SizedBox(height: ResponsiveApp.dHeight(16.0)),
                CreateAccountButton(textsUtil: textsUtil)
              ]
...
