...
            {"id": "es", "language": "Spanish", "selected": false}
        ]
    },
    "logout": {
        "title_dialog": "Log out",
        "message_dialog": "Are you sure you want to log out?",
        "confirm_dialog": "Accept",
        "cancel_dialog": "Cancel",
        "error_logout": "An error occurred while logging out. Please try again later."
    },
    "create_account": {
        "title": "Create account",
        "back_button": "Back",
        "name": "Name",
...
    "tabs": {
        "orders": "Orders",
        "clients": "Clients",
        "visits": "Visits"
    },
    "orders": {
        "title": "My orders",
        "no_orders": "You have not placed any orders yet.",
        "delivery": "Scheduled delivery: ",
        "truck": "Assigned truck: ",
        "products": "Products"
    },
    "new_order": {
        "title": "Create order",
        "availabes": "availabes",
        "availabe": "availabe",
        "empty_state": "No products available",
...
