...
import 'orders_pages/orders_page.dart';
import 'visits_pages/visits_page.dart';
import 'clients_pages/clients_page.dart';

class HomePage extends StatefulWidget {
  
  const HomePage( { super.key = const Key('home_page') } );

  @override
  State<HomePage> createState() => _HomePageState();
  
}

...
